Final-MVC-Project

--- a/Demo.PL/appsettings.json
+++ b/Demo.PL/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=. ; Database=MVCAliaa ; Trusted_Connection=true ;"
+    "DefaultConnection": "Server=. ; Database=MVCAliaa ; Trusted_Connection=true ; MultipleActiveResultSets=true"
   }
 }
